[tool.poetry]
name = "asyncio-book"
version = "0.1.0"
description = ""
authors = ["grm <golosov_SA@mail.ru>"]
readme = "README.md"
packages = [{include = "asyncio_book"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
requests = "^2.31.0"
aiohttp = "^3.8.5"
asyncpg = "^0.28.0"
python-dotenv = "^1.0.0"
numpy = "^1.26.0"
flask = "^3.0.0"
psycopg2 = "^2.9.8"
gunicorn = "^21.2.0"
uvicorn = "^0.23.2"
starlette = "^0.31.1"
websockets = "^11.0.3"
django = "^4.2.5"
beautifulsoup4 = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
